--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 aiohappyeyeballs==2.4.8
 aiohttp==3.11.13
 aiosignal==1.3.2
+altair==5.5.0
 annotated-types==0.7.0
 anyio==4.8.0
 asgiref==3.8.1
 attrs==25.1.0
 backoff==2.2.1
 bcrypt==4.3.0
+blinker==1.9.0
 build==1.2.2.post1
 cachetools==5.5.2
 certifi==2025.1.31
@@ -25,6 +27,8 @@ filelock==3.17.0
 flatbuffers==25.2.10
 frozenlist==1.5.0
 fsspec==2025.2.0
+gitdb==4.0.12
+GitPython==3.1.44
 google-auth==2.38.0
 googleapis-common-protos==1.69.0
 greenlet==3.1.1
@@ -44,6 +48,8 @@ jiter==0.8.2
 joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 kubernetes==32.0.1
 langchain==0.3.20
 langchain-chroma==0.2.2
@@ -63,6 +69,7 @@ monotonic==1.6
 mpmath==1.3.0
 multidict==6.1.0
 mypy-extensions==1.0.0
+narwhals==1.30.0
 networkx==3.4.2
 numpy==1.26.4
 oauthlib==3.2.2
@@ -81,27 +88,33 @@ opentelemetry-util-http==0.51b0
 orjson==3.10.15
 overrides==7.7.0
 packaging==24.2
+pandas==2.2.3
 pillow==11.1.0
 posthog==3.18.1
 propcache==0.3.0
 protobuf==5.29.3
+pyarrow==19.0.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pydantic==2.10.6
 pydantic-settings==2.8.1
 pydantic_core==2.27.2
+pydeck==0.9.1
 Pygments==2.19.1
 PyPika==0.48.9
 pyproject_hooks==1.2.0
 pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2025.1
 PyYAML==6.0.2
+referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 rich==13.9.4
+rpds-py==0.23.1
 rsa==4.9
 safetensors==0.5.3
 scikit-learn==1.6.1
@@ -109,22 +122,30 @@ scipy==1.15.2
 sentence-transformers==3.4.1
 shellingham==1.5.4
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.38
 starlette==0.46.0
+streamlit==1.43.1
 sympy==1.13.1
 tenacity==9.0.0
 threadpoolctl==3.5.0
 tiktoken==0.9.0
 tokenizers==0.21.0
+toml==0.10.2
 torch==2.6.0
+torchaudio==2.6.0
+torchvision==0.21.0
+tornado==6.4.2
 tqdm==4.67.1
 transformers==4.49.0
 typer==0.15.2
 typing-inspect==0.9.0
 typing_extensions==4.12.2
+tzdata==2025.1
 urllib3==2.3.0
 uvicorn==0.34.0
+watchdog==6.0.0
 watchfiles==1.0.4
 websocket-client==1.8.0
 websockets==15.0
