Remove OpenAI and remplace Grok with llama3

--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ GitPython==3.1.44
 google-auth==2.38.0
 googleapis-common-protos==1.69.0
 greenlet==3.1.1
+groq==0.20.0
 grpcio==1.70.0
 h11==0.14.0
 httpcore==1.0.7
@@ -54,7 +55,8 @@ kubernetes==32.0.1
 langchain==0.3.20
 langchain-chroma==0.2.2
 langchain-community==0.3.19
-langchain-core==0.3.41
+langchain-core==0.3.48
+langchain-groq==0.3.1
 langchain-huggingface==0.1.2
 langchain-openai==0.3.7
 langchain-text-splitters==0.3.6
